fixed the line height and the font size on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -177,10 +177,12 @@ footer a:hover {
 @media(max-width: 540px){
     body {
         width: 100%;
+        font-size: 1rem;
     }
 
     section {
         padding: 10px;
+        line-height: 1.5em;
     }
 
     .cape {
